--- a/package.json
+++ b/package.json
@@ -66,9 +66,10 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/next": "^8.0.7",
     "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
