--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,9 @@
     "noErrorTruncation": true,
     "useUnknownInCatchVariables": false,
     "downlevelIteration": true,
-    "noImplicitThis": false
+    "noImplicitThis": false,
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "types/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
