--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,5 @@
   "framework": "nextjs",
   "buildCommand": "next build",
   "devCommand": "next dev",
-  "installCommand": "npm install",
-  "routes": [
-    {
-      "src": "/sitemap.xml",
-      "dest": "/sitemap.xml"
-    }
-  ]
+  "installCommand": "npm install"
 } 
