--- a/KLUAttendanceMobile/package.json
+++ b/KLUAttendanceMobile/package.json
@@ -14,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/microsoft/TypeScript/issues"
   },
-  "main": "./lib/typescript.js",
+  "main": "index.js",
   "typings": "./lib/typescript.d.ts",
   "bin": {
     "tsc": "./bin/tsc",
@@ -34,6 +34,7 @@
     "!**/.gitattributes"
   ],
   "devDependencies": {
+    "@babel/core": "^7.20.0",
     "@dprint/formatter": "^0.4.1",
     "@dprint/typescript": "0.93.3",
     "@esfx/canceltoken": "^1.0.0",
@@ -45,12 +46,14 @@
     "@types/mocha": "^10.0.10",
     "@types/ms": "^0.7.34",
     "@types/node": "latest",
+    "@types/react": "~18.3.12",
     "@types/source-map-support": "^0.5.10",
     "@types/which": "^3.0.4",
     "@typescript-eslint/rule-tester": "^8.18.1",
     "@typescript-eslint/type-utils": "^8.18.1",
     "@typescript-eslint/utils": "^8.18.1",
     "azure-devops-node-api": "^14.1.0",
+    "babel-preset-expo": "~12.0.0",
     "c8": "^10.1.3",
     "chai": "^4.5.0",
     "chalk": "^4.1.2",
@@ -75,7 +78,7 @@
     "playwright": "^1.49.1",
     "source-map-support": "^0.5.21",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.2",
+    "typescript": "^5.3.0",
     "typescript-eslint": "^8.18.1",
     "which": "^3.0.1"
   },
@@ -94,7 +97,11 @@
     "lint": "hereby lint",
     "knip": "hereby knip",
     "format": "dprint fmt",
-    "setup-hooks": "node scripts/link-hooks.mjs"
+    "setup-hooks": "node scripts/link-hooks.mjs",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "browser": {
     "fs": false,
@@ -114,15 +121,18 @@
   "gitHead": "68cead182cc24afdc3f1ce7c8ff5853aba14b65a",
   "private": true,
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
-    "expo": "^52.0.46",
-    "metro": "^0.82.1",
-    "metro-core": "^0.82.1",
-    "metro-runtime": "^0.82.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "expo": "~52.0.46",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-svg-transformer": "^1.5.0"
   }
 }
