--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
+    "metro": "0.76.0",
+    "metro-config": "0.76.0",
+    "metro-core": "0.76.0",
+    "metro-resolver": "0.76.0",
+    "metro-runtime": "0.76.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
